--- a/components/clock/Clock.module.css
+++ b/components/clock/Clock.module.css
@@ -1,10 +1,11 @@
 .clock {
+  box-sizing: content-box; /* to avoid changing inner styles */
+  margin: 0 auto;
   position: relative;
   width: 50px;
   height: 50px;
   border-radius: 30px;
   border: solid 5px black;
-  box-sizing: content-box;
 }
 
 .hours {
