add clock dark theme

--- a/components/clock/Clock.module.css
+++ b/components/clock/Clock.module.css
@@ -53,3 +53,15 @@
     -webkit-transform: rotate(360deg);
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .clock {
+    border-color: white;
+  }
+  .hours:before {
+    background: white;
+  }
+  .minutes:before {
+    background: white;
+  }
+}
