unclickable links when no shown

--- a/components/info-corner/InfoCorner.module.css
+++ b/components/info-corner/InfoCorner.module.css
@@ -26,6 +26,13 @@
   stroke: var(--light-color);
 }
 
+.link {
+}
+.linkHidden {
+  cursor: default;
+  pointer-events: none;
+}
+
 .twitterIcon,
 .githubIcon,
 .infoIcon {
