--- a/styles/theme.css
+++ b/styles/theme.css
@@ -3,7 +3,7 @@
   --dark-color: #222;
   --light-color: #fff;
   --black-color: #000;
-  --accent-color: #357bbf;
+  --accent-color: #9c86e9;
 
   --glow-color: rgba(34, 34, 34, 1);
   --invert-glow: rgba(255, 255, 255, 1);
@@ -15,7 +15,7 @@
     --dark-color: #fff;
     --light-color: #222;
     --black-color: #fff;
-    --accent-color: #7d3eff;
+    --accent-color: #5f0fff;
 
     --glow-color: rgba(255, 255, 255, 1);
     --invert-glow: rgba(34, 34, 34, 1);
@@ -27,7 +27,7 @@
   --dark-color: #222;
   --light-color: #fff;
   --black-color: #000;
-  --accent-color: #357bbf;
+  --accent-color: #9c86e9;
 
   --glow-color: rgba(34, 34, 34, 1);
   --invert-glow: rgba(255, 255, 255, 1);
@@ -38,7 +38,7 @@
   --dark-color: #fff;
   --light-color: #222;
   --black-color: #fff;
-  --accent-color: #7d3eff;
+  --accent-color: #5f0fff;
 
   --glow-color: rgba(255, 255, 255, 1);
   --invert-glow: rgba(34, 34, 34, 1);
