--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@ input[type="range"] {
   -webkit-appearance: none;
   margin-bottom: 0.75rem;
   width: 100%;
+  background: var(--light-color);
 }
 /* input[type="range"]:focus {
   outline: none;
