--- a/src/components/info-corner/InfoCorner.module.css
+++ b/src/components/info-corner/InfoCorner.module.css
@@ -25,6 +25,10 @@
   cursor: pointer;
   stroke: var(--light-color);
 }
+.toggleButton > svg {
+  width: 30px;
+  height: 30px;
+}
 
 .link {
 }
@@ -45,14 +49,54 @@
   top: 92px;
   left: -92px;
   transform: rotate(90deg);
+  width: 40px;
+  height: 40px;
 }
 .githubIcon {
   top: 103px;
   left: -55px;
   transform: rotate(45deg);
+  width: 40px;
+  height: 44px;
 }
 .infoIcon {
   top: 89px;
   left: -3px;
   transform: rotate(0deg);
+  width: 40px;
+  height: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    --dimension: 5rem;
+  }
+  .toggleButton {
+    bottom: -2px;
+    left: -5px;
+  }
+  .toggleButton > svg {
+    width: 17px;
+    height: 17px;
+    max-width: 17px;
+  }
+
+  .twitterIcon {
+    top: 46px;
+    left: -42px;
+    width: 20px;
+    height: 20px;
+  }
+  .githubIcon {
+    top: 50px;
+    left: -26px;
+    width: 20px;
+    height: 22px;
+  }
+  .infoIcon {
+    top: 44px;
+    left: 0px;
+    width: 20px;
+    height: 20px;
+  }
 }
