--- a/src/components/theme-toggle/ThemeToggle.module.css
+++ b/src/components/theme-toggle/ThemeToggle.module.css
@@ -29,3 +29,17 @@
   width: 140px;
   height: 140px;
 }
+
+@media screen and (max-width: 768px) {
+  .btn {
+    bottom: 25px;
+    right: 25px;
+    height: 25px;
+    width: 15px;
+    height: 15px;
+  }
+  .btn:hover .glow {
+    width: 80px;
+    height: 80px;
+  }
+}
