mobile ui button inputrange settingsicon better overall

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -47,3 +47,9 @@
   z-index: 4;
   transition: color 0.35s ease-in;
 }
+
+@media screen and (max-width: 768px) {
+  .clocButton {
+    font-size: 0.8rem;
+  }
+}
