--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@ line {
 body {
   color: var(--black-color);
   background-color: var(--light-color);
+  font-size: 16px;
 }
 
 /* toggle theme animation */
@@ -77,4 +78,11 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 100%;
   background: var(--light-color);
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  html,
+  body {
+    font-size: 14px;
+  }
 }
