--- a/src/components/info-corner/InfoCorner.module.css
+++ b/src/components/info-corner/InfoCorner.module.css
@@ -46,26 +46,26 @@
   overflow: visible;
 }
 .twitterIcon {
-  top: 92px;
-  left: -92px;
-  transform: rotate(90deg);
+  top: 70px;
+  left: -72px;
+  transform: rotate(80deg);
   width: 40px;
   height: 40px;
 }
 .githubIcon {
-  top: 103px;
-  left: -55px;
-  transform: rotate(45deg);
+  top: 70px;
+  left: -25px;
+  transform: rotate(25deg);
   width: 40px;
   height: 44px;
 }
-.infoIcon {
+/* .infoIcon {
   top: 89px;
   left: -3px;
   transform: rotate(0deg);
   width: 40px;
   height: 40px;
-}
+} */
 
 @media screen and (max-width: 768px) {
   .container {
@@ -82,21 +82,21 @@
   }
 
   .twitterIcon {
-    top: 46px;
-    left: -42px;
+    top: 35px;
+    left: -35px;
     width: 20px;
     height: 20px;
   }
   .githubIcon {
-    top: 50px;
-    left: -26px;
+    top: 35px;
+    left: -10px;
     width: 20px;
     height: 22px;
   }
-  .infoIcon {
+  /* .infoIcon {
     top: 44px;
     left: 0px;
     width: 20px;
     height: 20px;
-  }
+  } */
 }
