--- a/src/components/clock/Clock.module.css
+++ b/src/components/clock/Clock.module.css
@@ -13,7 +13,7 @@
   width: 50px;
   height: 5px;
   top: 22.5px;
-  -webkit-animation: you-spin-me-round-round-baby-right-round 5s linear 0s
+  animation: spin 5s linear 0s
     infinite;
 }
 .hours:before {
@@ -31,7 +31,7 @@
   width: 50px;
   height: 5px;
   top: 22.5px;
-  -webkit-animation: you-spin-me-round-round-baby-right-round 0.41s linear 0s
+  animation: spin 0.41s linear 0s
     infinite;
 }
 
@@ -45,7 +45,7 @@
   border-radius: 5px;
 }
 
-@-webkit-keyframes you-spin-me-round-round-baby-right-round {
+@keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
   }
